--- a/Modul 3/style.css
+++ b/Modul 3/style.css
@@ -7,17 +7,9 @@ h2 {
     background-color: red;
     text-align: center;
 }
-table {
-    border: solid;
+form {
     border-style: dashed;
-    background: grey;
 }
 .td {
     font-weight: bold;
-}
-
-textarea {
-
-    border-radius: 5;
-    box-sizing: content-box;
 }
